[tool.poetry]
name = "renovate-pg-config"
version = "0.1.0"
description = ""
authors = ["Malte Gerth <mail@malte-gerth.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "~=2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
